--- a/tinder-fronend/src/header.css
+++ b/tinder-fronend/src/header.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     z-index: 100;
     border-bottom: 1.5px solid rgba(132, 122, 122, 0.244);
+    width: 100%;
 }
 .tinder-logo{
     object-fit: contain;
